@@ -4,6 +4,7 @@
 November 16, 2011
 -----------------
 Issue #1340512 by troky: Removed obsolete Signatures for forums code.
+Issue #1337470 by troky: Fixed Blue lagoon style.
 
 November 05, 2011
 -----------------
